# workerd

./: .bazelrc  BUILD.bazel  WORKSPACE  pnpm-lock.yaml
.github/workflows/: test.yml
patches/v8/: 0012-Fix-ICU-build.patch  0013-Support-cross-compilation-again.patch
rust-deps/: BUILD.bazel  Cargo.toml
src/node/internal/: internal_inspect.ts  util.d.ts
src/pyodide/: BUILD.bazel  python-entrypoint-helper.js
src/pyodide/internal/: builtin_wrappers.js  metadata.js  python.js
src/workerd/api/: crypto-impl-aes.c++  crypto-impl-asymmetric.c++  crypto.c++  crypto.h  global-scope.c++  global-scope.h  trace.c++  trace.h
src/workerd/api/node/: buffer.c++  util.c++  util.h
src/workerd/api/streams/: common.c++  common.h  internal.c++  standard.c++
src/workerd/api/tests/: js-rpc-test.js
src/workerd/io/: actor-cache-test.c++  actor-cache.c++  actor-cache.h  compatibility-date.capnp  io-context.c++  io-context.h  trace.c++  trace.h  worker-entrypoint.c++  worker-interface.capnp
src/workerd/jsg/: BUILD.bazel  async-context.c++  buffersource.c++  jsg.h  resource.h  setup.h
src/workerd/server/: BUILD.bazel  server.c++  v8-platform-impl.c++  voodoo-pipe.h  voodoo.c++  workerd-api.c++  workerd.capnp
src/workerd/tests/: BUILD.bazel  performance-test.js
src/workerd/tools/: BUILD.bazel
src/workerd/util/: BUILD.bazel
toolchain/: BUILD.bazel  cc_toolchain_config.bzl
