# This is the Rust <-> workerd integration crate. It provides utilities implemented in Rust and
# is exposed using cxx to avoid needing to build a C FFI binding manually in both Rust and C++.
#
# It also has some extra code to make sure loading multiple Rust libraries into workerd
# is safe (specifically, lol-html). See
# * https://github.com/adetaylor/cxx/blob/book/book/src/building.md#linking-the-c-and-rust-together
# * https://github.com/rust-lang/rust/issues/73632
# Basically we create a mega-crate that links in all our rust dependencies which is
# the best that we can do right now to avoid linkage issues.

[package]
name = "rust-deps"
version = "0.0.0"
authors = ["Vitali Lovich <vlovich@cloudflare.com>", "Aaron Loyd <aloyd@cloudflare.com", "Felix Hanau <felix@cloudflare.com>"]
edition = "2018"

[lib]
crate-type = ["staticlib"]

[dependencies]
lolhtml = {git = "https://github.com/cloudflare/lol-html.git", rev = "7967765ff8db27000845ba0a0a9a025ac908a043"}

[profile.dev.package."*"]
opt-level = 1

[profile.dev]
panic = "abort"
debug-assertions=false
debug = "none"
overflow-checks = false

[profile.release]
panic = "abort"
codegen-units=1