package(default_visibility = ["//visibility:public"])
load(":cc_toolchain_config.bzl", "cc_toolchain_config", "cc_toolchain_config2")

cc_toolchain_suite(
    name = "clang_suite",
    toolchains = {
        "aarch64": ":aarch64_toolchain",
        "x86_64": ":x86_64_toolchain",
    },
)

filegroup(name = "empty")

toolchain_type(name = "toolchain_type")

toolchain(
    name = "aarch64_toolchain2",
    exec_compatible_with = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64",
    ],
    target_compatible_with = [
        "@platforms//os:linux",
        "@platforms//cpu:aarch64",
    ],
    toolchain = ":aarch64_toolchain",
    toolchain_type = ":toolchain_type",
)

toolchain(
    name = "x86_64_toolchain2",
    exec_compatible_with = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64",
    ],
    target_compatible_with = [
        "@platforms//os:linux",
        "@platforms//cpu:aarch64",
    ],
    toolchain = ":x86_64_toolchain",
    toolchain_type = ":toolchain_type",
)

cc_toolchain(
    name = "aarch64_toolchain",
    toolchain_identifier = "aarch64-toolchain",
    toolchain_config = ":aarch64_toolchain_config",
    all_files = ":empty",
    compiler_files = ":empty",
    dwp_files = ":empty",
    linker_files = ":empty",
    objcopy_files = ":empty",
    strip_files = ":empty",
    supports_param_files = 0,
)

cc_toolchain(
    name = "x86_64_toolchain",
    toolchain_identifier = "x86_64-toolchain",
    toolchain_config = ":x86_64_toolchain_config",
    all_files = ":empty",
    compiler_files = ":empty",
    dwp_files = ":empty",
    linker_files = ":empty",
    objcopy_files = ":empty",
    strip_files = ":empty",
    supports_param_files = 0,
)

cc_toolchain_config(name = "aarch64_toolchain_config")
cc_toolchain_config2(name = "x86_64_toolchain_config")
